We can now remove mods